# algorand-hackathon

./: .gitignore  README.md
.github/workflows/: api-tests.yml
projects/api/: .algokit.toml  .gitignore  README.md  pyproject.toml
projects/api/data/keys/: C2DTXSMHOPDTCT7QA65JF6OABLHBFBMVXOXETAJWI3BQLYGRMKL2ULTDLA.key  ZOB5HPV7WTC5DMUIL7N75GCSXRK7OQPPW5BBZS7EYL4A2EWFKWAJAEBD2Y.key
projects/api/scripts/: setup_demo_account.py
projects/api/src/: asset_create.py  asset_retrieve.py  dev_tools.py  generate_asset_id.py  get_balance.py  main.py  models.py  routes.py  storage.py  utils.py
projects/api/tests/: test_generate_asset_id.py  test_storage.py
projects/contracts/smart_contracts/artifacts/hello_world/: HelloWorld.arc56.json  hello_world_client.py
projects/contracts/smart_contracts/jan-dummy-contract/: contract.py  deploy_config.py
projects/frontend/: components.json  package-lock.json  package.json  vite.config.ts
projects/frontend/src/: Home.tsx
projects/frontend/src/components/: ConnectWallet.tsx  JsonDropzone.tsx  PreviewContent.tsx  UploadContent.tsx  VerifyContent.tsx  c9f80c23cebd0adc7debd3bb59416d753699f3ace236e7bf20334ad74170e834-1.json
projects/frontend/src/contracts/: HelloWorld.ts
projects/frontend/src/styles/: App.css
